# TubeRip

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  TODO.md  cli.py  pyproject.toml  requirements-dev.txt  requirements.txt
database/: db.py
downloader/: engine.py
metadata/: fetcher.py
models/: job.py
tests/: test_cli.py  test_fetcher.py
utils/: clipboard.py  graph.py  ui.py
