[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tuberip"
version = "0.1.0"
description = "TubeRip Pro — a professional YouTube downloader with CLI, persistence, and smart profile management."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
  {name = "TubeRip Project"},
]
keywords = ["youtube", "downloader", "yt-dlp", "cli", "media", "sqlite"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]
dependencies = [
  "yt-dlp>=2024.12.13",
  "requests>=2.31.0",
  "Pillow>=10.0.0",
]

[project.optional-dependencies]
clipboard = ["pyperclip>=1.8.0"]
dev = [
  "mypy>=1.10.0",
  "ruff>=0.5.0",
  "pytest>=8.0.0",
  "pytest-cov>=5.0.0",
  "types-requests>=2.31.0.20240911",
  "pre-commit>=3.0.0",
]

[project.scripts]
tuberip = "cli:main"

[tool.hatch.build.targets.wheel]
include = ["*.py", "database/**", "downloader/**", "metadata/**", "models/**", "utils/**", "search/**", "ui/**"]

[tool.hatch.build.targets.sdist]
include = ["*.py", "database/**", "downloader/**", "metadata/**", "models/**", "utils/**", "search/**", "ui/**"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.ruff]
line-length = 100
target-version = 'py310'

[tool.ruff.lint]
select = ["E", "F", "B", "UP", "I", "ARG", "C4", "Q", "RUF", "PD", "PGH", "PL", "RET", "SIM"]
ignore = ["E501"]  # line-length handled above

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"

